# Biblioteca

./: .gitignore  Dockerfile  Procfile  README.md  app.py  credentials.json  d  data.json  database.db  key_generator.py  livros.xlsx  main.py  models.py  pyproject.toml  request.py  requirements.txt  save.bat
.credentials/: credentials.json  secret_key.env
ApiBiblioteca/: Dockerfile  pyproject.toml
ApiBiblioteca/apibiblioteca/api/: book.py  email.py
ApiBiblioteca/apibiblioteca/templates/: key_sended.html  register_email.html
api/: __init__.py  book.py  connector.py  data_handler.py  email.py  files.py  keys.py  lending.py  models.py  routes.py  user.py
apibiblioteca/: .gitignore  __init__.py  app.py  book.py  connector.py  data.py  email.py  files.py  keys.py  lending.py  models.py  routes.py  user.py  utils.py  watcher.py  watchers.py
apibiblioteca/api/: connector.py  email.py  files.py  keys.py  user.py
apibiblioteca/templates/: key_required.html
bibilioteca/: database.db  main.py  pee_wee.py
bibilioteca/static/: css.css
bibilioteca/templates/: main.html
temp/: index.html
templates/: base.html  get_code.html  get_data.html  index.html  key_required.html  key_sended.html  login.html  register_email.html  signup.html  user.html
