[tool.poetry]
name = "apibiblioteca"
version = "0.1.0"
description = ""
authors = ["Felifelps <felipefelipe23456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
firebase-admin = "^6.2.0"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
peewee = "^3.17.0"
flask-cors = "^4.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
